...
    _libctl.window.restorationClass = [self class];
    _libctl.window.identifier = @"library";

    _prefctl = [[Preferences alloc] initWithWindowNibName:@"PrefsWindow"];
    _prefctl.window.restorable = YES;
    _prefctl.window.restorationClass = [self class];
    _prefctl.window.identifier = @"preferences";
    _prefctl.libcontroller = _tableViewController;
}

#pragma mark -
#pragma mark License window

...
