...
                    </connections>
                </button>
                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xeV-t7-YSa">
                    <rect key="frame" x="193" y="38" width="214" height="32"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                    <string key="toolTip">Overwrite all custom styles with autogenerated ones based on the Normal style. Does not affect the grid or buffer Normal styles.</string>
                    <buttonCell key="cell" type="push" title="Un-customize styles" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="dck-5P-tWf">
                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                        <font key="font" metaFont="system"/>
                    </buttonCell>
                    <connections>
                        <action selector="changeOverwriteStyles:" target="-2" id="y20-J8-PD7"/>
                    </connections>
...
